feat: prepare all 3 services for Render + Vercel deployment