@@ -2,6 +2,7 @@ package com.AI_BASED.BACKEND.CONFIG;
 
 import com.AI_BASED.BACKEND.JWT.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -17,6 +18,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -24,6 +26,16 @@ import java.util.List;
 public class SecurityConfiguration {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    /**
+     * Reads allowed CORS origins from the ALLOWED_ORIGINS environment variable.
+     * In production on Render: set ALLOWED_ORIGINS=https://your-app.vercel.app
+     * Supports multiple origins as a comma-separated list:
+     *   ALLOWED_ORIGINS=https://exam-pilot.vercel.app,https://www.exampilot.com
+     * Falls back to localhost:5173 for local development.
+     */
+    @Value("${ALLOWED_ORIGINS:http://localhost:5173}")
+    private String allowedOrigins;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -41,7 +53,12 @@ public class SecurityConfiguration {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+
+        // Parse comma-separated ALLOWED_ORIGINS env variable into a list.
+        // Example: "https://exam-pilot.vercel.app,http://localhost:5173"
+        List<String> origins = Arrays.asList(allowedOrigins.split(","));
+        configuration.setAllowedOrigins(origins);
+
         configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "Cache-Control", "X-Processing-Job-Id"));
         configuration.setAllowCredentials(true);
